# googleadsanalyzerv2

./: .env.example  .gitignore  README.md  cloudbuild.yaml  docker-compose.yml  google-ads-ai-agent-requirements.md  render.yaml  setup.sh
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_manual_creative_category.py  003_add_proposal_conversations.py  004_add_proposal_snapshots.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analysis.py  campaigns.py  chatwork.py  dashboard.py  proposals.py  reports.py  router.py
backend/app/db/: session.py
backend/app/models/: __init__.py  auction_insight.py  base.py  campaign.py  competitor.py  conversation.py  execution.py  insight.py  proposal.py  result.py  snapshot.py  weekly_report.py
backend/app/schemas/: campaign.py  dashboard.py  proposal.py  report.py
backend/app/services/: ad_copy_validator.py  chatwork.py  claude_analyzer.py  data_fetcher.py  google_ads.py  google_ads_writer.py  impact_tracker.py  proposal_chat.py  proposal_executor.py  report_generator.py  scheduler.py
backend/scripts/: generate_refresh_token.py  run_weekly_analysis.py
deploy/: README.md  env.example
docs/: SPECIFICATION.md  USER_GUIDE.md  見積書_GoogleAdsAIAgent.xlsx
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/src/lib/: api.ts  (+2 more)
(+14 files in other folders)
