[project]
name = "google-ads-ai-agent"
version = "0.1.0"
description = "Google Ads AI Agent - Autonomous analysis and improvement proposals"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "google-ads>=25.1.0",
    "anthropic>=0.40.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
